# sql_bd

./: create_sql_script.sql  home_work_script.sql  homework.db  pyproject.toml  seeds.py
